--- a/idea/select/select.component.html
+++ b/idea/select/select.component.html
@@ -38,5 +38,6 @@
     class="selectIcon"
     *ngIf="!disabled"
     [class.selectable]="!disabled"
+    [class.withLabel]="label"
   ></ion-icon>
 </ion-item>
