--- a/idea/customFields/customFields.component.html
+++ b/idea/customFields/customFields.component.html
@@ -17,10 +17,10 @@
       class="fieldMain"
     >
       <b>
-        {{ fields[f].name }}
+        {{ getFieldName(fields[f]) }}
       </b>
       <p>
-        {{ fields[f].description }}
+        {{ getFieldDescription(fields[f]) }}
       </p>
       <p
         class="fieldOptions"
