Added terms and conditions to auth

--- a/idea/auth/auth.scss
+++ b/idea/auth/auth.scss
@@ -3,7 +3,7 @@
 }
 .authCard {
   min-width: 400px;
-  max-width: 500px;
+  max-width: 550px;
   margin: 0 auto;
   margin-left: 10px;
   margin-right: 10px;
@@ -42,7 +42,7 @@
       padding-right: 5px;
       font-size: 1.3em;
     }
-    .privacyPolicyAcceptanceRow {
+    .agreementsAcceptanceRow {
       margin-top: 15px;
       font-size: 0.9em;
       ion-checkbox {
