--- a/idea/auth/auth.scss
+++ b/idea/auth/auth.scss
@@ -9,7 +9,7 @@
   margin-right: 10px;
   padding: 20px;
   background-color: white;
-  border: 1px solid #DDD;
+  border: 1px solid #ddd;
   border-radius: 10px;
   box-shadow: none;
   text-align: center;
