--- a/idea/calendar/calendar.component.scss
+++ b/idea/calendar/calendar.component.scss
@@ -6,7 +6,8 @@ h1 {
   font-weight: bold;
   text-transform: uppercase;
 }
-ion-col, ion-button {
+ion-col,
+ion-button {
   font-size: 1em;
 }
 ion-button {
