--- a/idea/checker/checker.component.html
+++ b/idea/checker/checker.component.html
@@ -1,29 +1,10 @@
-<ion-item
-  class="checkerItem"
-  [lines]="lines || 'full'"
-  [title]="placeholder || null"
-  (click)="fetchDataAndOpenModal()"
->
-  <ion-icon
-    slot="start"
-    *ngIf="icon"
-    [name]="icon"
-  ></ion-icon>
-  <ion-label
-    position="stacked"
-    *ngIf="!icon && label"
-    [class.selectable]="!disabled || tappableWhenDisabled"
-  >
+<ion-item class="checkerItem" [lines]="lines || 'full'" [title]="placeholder || null" (click)="fetchDataAndOpenModal()">
+  <ion-icon slot="start" *ngIf="icon" [name]="icon"></ion-icon>
+  <ion-label position="stacked" *ngIf="!icon && label" [class.selectable]="!disabled || tappableWhenDisabled">
     {{ label }}
-    <ion-text
-      class="obligatoryDot"
-      *ngIf="obligatory && !disabled"
-    ></ion-text>
+    <ion-text class="obligatoryDot" *ngIf="obligatory && !disabled"></ion-text>
   </ion-label>
-  <ion-label
-    class="description"
-    [class.selectable]="!disabled || tappableWhenDisabled"
-  >
+  <ion-label class="description" [class.selectable]="!disabled || tappableWhenDisabled">
     {{ getPreview() }}
   </ion-label>
   <ion-icon
