--- a/idea/customFields/customFieldManager.component.html
+++ b/idea/customFields/customFieldManager.component.html
@@ -1,70 +1,42 @@
-<ion-header
-  no-border
->
-  <ion-toolbar
-    class="ideaToolbar"
-  >
+<ion-header no-border>
+  <ion-toolbar class="ideaToolbar">
     <ion-title>
       {{ 'IDEA.CUSTOM_FIELDS.MANAGE_FIELD' | translate }}
     </ion-title>
-    <ion-buttons
-      slot="end"
-    >
-      <ion-button
-        [title]="t.instant('IDEA.CUSTOM_FIELDS.CLOSE_WITHOUT_SAVING')"
-        (click)="close()"
-      >
-        <ion-icon
-          slot="icon-only"
-          name="close"
-        ></ion-icon>
+    <ion-buttons slot="end">
+      <ion-button [title]="t.instant('IDEA.CUSTOM_FIELDS.CLOSE_WITHOUT_SAVING')" (click)="close()">
+        <ion-icon slot="icon-only" name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-list
-    padding
-  >
+  <ion-list padding>
     <ion-row
-      justify-content-center align-items-end
+      justify-content-center
+      align-items-end
       class="languageSelector"
       *ngIf="defaultLanguage && availableLanguages.length > 1"
     >
       <ion-col
-        text-center tappable
+        text-center
+        tappable
         size="1"
         *ngFor="let l of availableLanguages"
         [class.current]="l === currentLanguage"
         (click)="currentLanguage = l"
       >
-        <img
-          [src]="'assets/flags/'+l+'.png'"
-        >
+        <img [src]="'assets/flags/' + l + '.png'" />
       </ion-col>
     </ion-row>
-    <ion-item
-      lines="inset"
-      [class.fieldHasError]="hasFieldAnError('name')"
-    >
-      <ion-label
-        position="stacked"
-      >
+    <ion-item lines="inset" [class.fieldHasError]="hasFieldAnError('name')">
+      <ion-label position="stacked">
         {{ 'IDEA.CUSTOM_FIELDS.NAME' | translate }}
       </ion-label>
-      <ion-input
-        type="text"
-        [value]="getFieldName()"
-        (ionChange)="setFieldName($event.detail.value)"
-      ></ion-input>
+      <ion-input type="text" [value]="getFieldName()" (ionChange)="setFieldName($event.detail.value)"></ion-input>
     </ion-item>
-    <ion-item
-      lines="inset"
-      [class.fieldHasError]="hasFieldAnError('description')"
-    >
-      <ion-label
-        position="stacked"
-      >
+    <ion-item lines="inset" [class.fieldHasError]="hasFieldAnError('description')">
+      <ion-label position="stacked">
         {{ 'IDEA.CUSTOM_FIELDS.DESCRIPTION' | translate }}
         ({{ ('IDEA.CUSTOM_FIELDS.OPTIONAL' | translate).toLowerCase() }})
       </ion-label>
@@ -74,127 +46,61 @@
         (ionChange)="setFieldDescription($event.detail.value)"
       ></ion-input>
     </ion-item>
-    <ion-item
-      lines="inset"
-      [class.fieldHasError]="hasFieldAnError('type')"
-    >
-      <ion-label
-        position="stacked"
-      >
+    <ion-item lines="inset" [class.fieldHasError]="hasFieldAnError('type')">
+      <ion-label position="stacked">
         {{ 'IDEA.CUSTOM_FIELDS.TYPE' | translate }}
       </ion-label>
-      <ion-select
-        [(ngModel)]="theField.type"
-      >
-        <ion-select-option
-          *ngFor="let t of FIELD_TYPES"
-          [value]="t"
-        >
-          {{ 'IDEA.CUSTOM_FIELDS.FIELDS_TYPES.'+t | translate }}
+      <ion-select [(ngModel)]="theField.type">
+        <ion-select-option *ngFor="let t of FIELD_TYPES" [value]="t">
+          {{ 'IDEA.CUSTOM_FIELDS.FIELDS_TYPES.' + t | translate }}
         </ion-select-option>
       </ion-select>
     </ion-item>
-    <ion-item
-      lines="inset"
-      *ngIf="theField.type == 'ENUM'"
-      [class.fieldHasError]="hasFieldAnError('enum')"
-    >
-      <ion-label
-        position="stacked"
-      >
+    <ion-item lines="inset" *ngIf="theField.type == 'ENUM'" [class.fieldHasError]="hasFieldAnError('enum')">
+      <ion-label position="stacked">
         {{ 'IDEA.CUSTOM_FIELDS.ENUM' | translate }}
       </ion-label>
-      <ion-input
-        type="text"
-        [(ngModel)]="enumAsString"
-      ></ion-input>
+      <ion-input type="text" [(ngModel)]="enumAsString"></ion-input>
     </ion-item>
-    <ion-item
-      lines="inset"
-      *ngIf="theField.type !== 'BOOLEAN'"
-      [class.fieldHasError]="hasFieldAnError('default')"
-    >
-      <ion-label
-        position="stacked"
-      >
+    <ion-item lines="inset" *ngIf="theField.type !== 'BOOLEAN'" [class.fieldHasError]="hasFieldAnError('default')">
+      <ion-label position="stacked">
         {{ 'IDEA.CUSTOM_FIELDS.DEFAULT' | translate }}
         ({{ ('IDEA.CUSTOM_FIELDS.OPTIONAL' | translate).toLowerCase() }})
       </ion-label>
-      <ion-input
-        type="text"
-        [(ngModel)]="theField.default"
-      ></ion-input>
+      <ion-input type="text" [(ngModel)]="theField.default"></ion-input>
     </ion-item>
-    <ion-item
-      lines="inset"
-      [class.fieldHasError]="hasFieldAnError('min')"
-      *ngIf="theField.type == 'NUMBER'"
-    >
-      <ion-label
-        position="stacked"
-      >
+    <ion-item lines="inset" [class.fieldHasError]="hasFieldAnError('min')" *ngIf="theField.type == 'NUMBER'">
+      <ion-label position="stacked">
         {{ 'IDEA.CUSTOM_FIELDS.MIN' | translate }}
         ({{ ('IDEA.CUSTOM_FIELDS.OPTIONAL' | translate).toLowerCase() }})
       </ion-label>
-      <ion-input
-        type="number"
-        [(ngModel)]="theField.min"
-      ></ion-input>
+      <ion-input type="number" [(ngModel)]="theField.min"></ion-input>
     </ion-item>
-    <ion-item
-      lines="inset"
-      [class.fieldHasError]="hasFieldAnError('max')"
-      *ngIf="theField.type == 'NUMBER'"
-    >
-      <ion-label
-        position="stacked"
-      >
+    <ion-item lines="inset" [class.fieldHasError]="hasFieldAnError('max')" *ngIf="theField.type == 'NUMBER'">
+      <ion-label position="stacked">
         {{ 'IDEA.CUSTOM_FIELDS.MAX' | translate }}
         ({{ ('IDEA.CUSTOM_FIELDS.OPTIONAL' | translate).toLowerCase() }})
       </ion-label>
-      <ion-input
-        type="number"
-        [(ngModel)]="theField.max"
-      ></ion-input>
+      <ion-input type="number" [(ngModel)]="theField.max"></ion-input>
     </ion-item>
-    <ion-item
-      lines="inset"
-      *ngIf="theField.type !== 'BOOLEAN'"
-      [class.fieldHasError]="hasFieldAnError('obligatory')"
-    >
-      <ion-label
-        position="stacked"
-      >
+    <ion-item lines="inset" *ngIf="theField.type !== 'BOOLEAN'" [class.fieldHasError]="hasFieldAnError('obligatory')">
+      <ion-label position="stacked">
         {{ 'IDEA.CUSTOM_FIELDS.OBLIGATORY' | translate }}
       </ion-label>
-      <ion-select
-        [(ngModel)]="theField.obligatory"
-      >
-        <ion-select-option
-          [value]="false"
-        >
+      <ion-select [(ngModel)]="theField.obligatory">
+        <ion-select-option [value]="false">
           {{ 'COMMON.NO' | translate }}
         </ion-select-option>
-        <ion-select-option
-          [value]="true"
-        >
+        <ion-select-option [value]="true">
           {{ 'COMMON.YES' | translate }}
         </ion-select-option>
       </ion-select>
     </ion-item>
     <ion-row>
-      <ion-col
-        text-right padding
-      >
-        <ion-button
-          [title]="t.instant('IDEA.CUSTOM_FIELDS.UPDATE_FIELD')"
-          (click)="save()"
-        >
+      <ion-col text-right padding>
+        <ion-button [title]="t.instant('IDEA.CUSTOM_FIELDS.UPDATE_FIELD')" (click)="save()">
           {{ 'IDEA.CUSTOM_FIELDS.SAVE' | translate }}
-          <ion-icon
-            slot="end"
-            name="checkmark"
-          ></ion-icon>
+          <ion-icon slot="end" name="checkmark"></ion-icon>
         </ion-button>
       </ion-col>
     </ion-row>
