--- a/idea/languagePicker/languagePicker.component.html
+++ b/idea/languagePicker/languagePicker.component.html
@@ -1,16 +1,6 @@
-<ion-fab
-  #languagePicker
-  id="IDEALanguagePicker"
-  edge="true" vertical="top" horizontal="end"
->
-  <ion-fab-button
-    size="small"
-    color="light"
-    [title]="t.instant('IDEA.LANGUAGE_PICKER.CHANGE_LANGUAGE')"
-  >
-    <img
-      [src]="'assets/flags/'+t.currentLang+'.png'"
-    />
+<ion-fab #languagePicker id="IDEALanguagePicker" edge="true" vertical="top" horizontal="end">
+  <ion-fab-button size="small" color="light" [title]="t.instant('IDEA.LANGUAGE_PICKER.CHANGE_LANGUAGE')">
+    <img [src]="'assets/flags/' + t.currentLang + '.png'" />
   </ion-fab-button>
   <ion-fab-list>
     <ion-fab-button
@@ -20,9 +10,7 @@
       [title]="t.instant('IDEA.LANGUAGE_PICKER.CHANGE_LANGUAGE')"
       (click)="changeLanguage(l, languagePicker)"
     >
-      <img
-        [src]="'assets/flags/'+l+'.png'"
-      />
+      <img [src]="'assets/flags/' + l + '.png'" />
     </ion-fab-button>
   </ion-fab-list>
 </ion-fab>
