--- a/idea/list/list.component.html
+++ b/idea/list/list.component.html
@@ -1,53 +1,28 @@
-<ion-header
-  no-border
->
-  <ion-toolbar
-    class="ideaToolbar"
-  >
+<ion-header no-border>
+  <ion-toolbar class="ideaToolbar">
     <ion-title>
       {{ title || ('IDEA.LIST.LIST' | translate) }}
     </ion-title>
-    <ion-buttons
-      slot="start"
-    >
-      <ion-button
-        [title]="t.instant('IDEA.LIST.CANCEL_AND_CLOSE')"
-        (click)="close()"
-      >
-        <ion-icon
-          name="close"
-          slot="icon-only"
-        ></ion-icon>
+    <ion-buttons slot="start">
+      <ion-button [title]="t.instant('IDEA.LIST.CANCEL_AND_CLOSE')" (click)="close()">
+        <ion-icon name="close" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-buttons
-      slot="end"
-    >
-      <ion-button
-        [title]="t.instant('IDEA.LIST.NEW_ELEMENT')"
-        (click)="addElement()"
-      >
-        <ion-icon
-          name="add"
-          slot="icon-only"
-        ></ion-icon>
+    <ion-buttons slot="end">
+      <ion-button [title]="t.instant('IDEA.LIST.NEW_ELEMENT')" (click)="addElement()">
+        <ion-icon name="add" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content>
   <ion-list>
-    <ion-item
-      lines="none"
-      *ngIf="!list.length"
-    >
+    <ion-item lines="none" *ngIf="!list.length">
       <i>
         {{ 'IDEA.LIST.NO_ELEMENTS_IN_LIST' | translate }}
       </i>
     </ion-item>
-    <ion-item
-      *ngFor="let element of list"
-    >
+    <ion-item *ngFor="let element of list">
       {{ element }}
       <ion-button
         slot="end"
@@ -56,27 +31,15 @@
         [title]="t.instant('IDEA.LIST.DELETE_ELEMENT')"
         (click)="removeElement(element)"
       >
-        <ion-icon
-          name="trash"
-          slot="icon-only"
-        ></ion-icon>
+        <ion-icon name="trash" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-item>
   </ion-list>
 </ion-content>
 <ion-footer>
-  <ion-toolbar
-    tappable
-    class="ideaToolbar"
-    [title]="t.instant('IDEA.LIST.SAVE_AND_CLOSE')"
-    (click)="close(true)"
-  >
-    <ion-title
-      text-center
-    >
-      <ion-icon
-        name="checkmark"
-      ></ion-icon>
+  <ion-toolbar tappable class="ideaToolbar" [title]="t.instant('IDEA.LIST.SAVE_AND_CLOSE')" (click)="close(true)">
+    <ion-title text-center>
+      <ion-icon name="checkmark"></ion-icon>
     </ion-title>
   </ion-toolbar>
 </ion-footer>
