--- a/idea/list/list.component.html
+++ b/idea/list/list.component.html
@@ -38,7 +38,7 @@
 </ion-content>
 <ion-footer>
   <ion-toolbar tappable class="ideaToolbar" [title]="t.instant('IDEA.LIST.SAVE_AND_CLOSE')" (click)="close(true)">
-    <ion-title text-center>
+    <ion-title class="ion-text-center">
       <ion-icon name="checkmark"></ion-icon>
     </ion-title>
   </ion-toolbar>
