--- a/idea/mde/mde.component.html
+++ b/idea/mde/mde.component.html
@@ -15,7 +15,7 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content padding>
+<ion-content class="ion-padding">
   <h2 class="header" *ngIf="header">
     {{ header }}
   </h2>
