--- a/idea/signature/signature.component.html
+++ b/idea/signature/signature.component.html
@@ -35,7 +35,7 @@
       <canvas id="signatureCanvas"></canvas>
     </div>
     <ion-row>
-      <ion-col text-right>
+      <ion-col class="ion-text-right">
         <ion-button fill="clear" [title]="t.instant('IDEA.SIGNATURE.CLEAR_SIGNATURE')" (click)="clear()">
           <ion-icon name="trash" slot="icon-only"></ion-icon>
         </ion-button>
